--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -10,6 +10,53 @@ html, body {
     padding: 20px;
 }
 
+.column {
+    height: 100%;
+}
+
+.panel-wrapper {
+    height: 100%;
+    position: relative;
+}
+
+.panel {
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    right: 5px;
+    bottom: 5px;
+    border-width: 1px;
+    border-color: rgb(196, 196, 196);
+    border-style: solid;
+    border-radius: 10px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 2px 2px 10px #888888;
+}
+
+.panel-item, .panel-header {
+    border-bottom-width: 1px;
+    border-bottom-color: rgb(196, 196, 196);
+    border-bottom-style: solid;
+    width: 100%;
+    height: 34px;
+}
+
+.panel-header {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 34px;
+}
+
+.panel-header-text {
+    padding-left: 10px;
+}
+
+.panel-header-nav {
+    line-height: 30px;
+    padding-right: 4px;
+    padding-top: 1px;
+}
+
 .form-wrapper {
     margin-left: auto;
     margin-right: auto;
@@ -20,6 +67,7 @@ html, body {
     border-color: rgb(196, 196, 196);
     border-style: solid;
     border-radius: 5px;
+    box-shadow: 2px 2px 10px #888888;
 }
 
 .nav-wrapper {
@@ -30,10 +78,17 @@ html, body {
 #header {
     width: 100%;
     height: 60px;
-    background-color: rgb(207, 226, 243);
     border-bottom-width: 1px;
     border-bottom-color: rgb(196, 196, 196);
     border-bottom-style: solid;
+    background-color: rgb(207, 226, 243); /* Old browsers */
+    background: -moz-linear-gradient(top, rgb(207,226,243) 0%, rgb(41,137,216) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(207,226,243)), color-stop(100%,rgb(41,137,216))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, rgb(207,226,243) 0%,rgb(41,137,216) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, rgb(207,226,243) 0%,rgb(41,137,216) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, rgb(207,226,243) 0%,rgb(41,137,216) 100%); /* IE10+ */
+    background: linear-gradient(to bottom, rgb(207,226,243) 0%,rgb(41,137,216) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#CFE2F3', endColorstr='#2989d8',GradientType=0 ); /* IE6-9 */
 }
 
 #header-left {
@@ -60,6 +115,8 @@ html, body {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
+    color: #555555;
+    text-shadow: 0 1px 0 #222222;
 }
 
 #application-wrapper {
@@ -67,12 +124,16 @@ html, body {
     border-width: 1px;
     border-color: rgb(196, 196, 196);
     border-style: solid;
-    min-height: 100%;
+    height: 100%;
+    position: relative;
 }
 
 #application {
     width: 100%;
     margin-top: 60px;
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
 }
 
 @media (max-width: 979px) {
@@ -80,3 +141,8 @@ html, body {
         margin-top: 0px;
     }
 }
+
+#contacts-panel-wrapper {
+
+}
+
