--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -57,6 +57,19 @@ html, body {
     padding-top: 1px;
 }
 
+.panel-body {
+    overflow: scroll;
+    width: 100%;
+}
+
+.panel-item-text {
+    position: absolute;
+    line-height: 34px;
+    left: 34px;
+    font-size: 16px;
+    font-weight: 200;
+}
+
 .form-wrapper {
     margin-left: auto;
     margin-right: auto;
@@ -115,7 +128,7 @@ html, body {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
-    color: #555555;
+    color: #FFFFFF;
     text-shadow: 0 1px 0 #222222;
 }
 
@@ -142,7 +155,58 @@ html, body {
     }
 }
 
-#contacts-panel-wrapper {
+.contact-status-indicator {
+    border-width: 1px;
+    border-color: rgb(196, 196, 196);
+    border-style: solid;
+    border-radius: 6px;
+    width: 12px;
+    height: 12px;
+    margin: 10px;
+    position: absolute;
+}
 
+.contact-status-indicator-available {
+    background-color: rgb(46, 191, 5); /* Old browsers */
+    background: -moz-linear-gradient(top, rgb(46, 191, 5) 0%, rgb(217, 234, 211) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(46, 191, 5)), color-stop(100%,rgb(217, 234, 211))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, rgb(46, 191, 5) 0%,rgb(217, 234, 211) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, rgb(46, 191, 5) 0%,rgb(217, 234, 211) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, rgb(46, 191, 5) 0%,rgb(217, 234, 211) 100%); /* IE10+ */
+    background: linear-gradient(to bottom, rgb(46, 191, 5) 0%,rgb(217, 234, 211) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2EBF05', endColorstr='#D9EAD3',GradientType=0 ); /* IE6-9 */
+}
+
+.contact-status-indicator-away {
+    background-color: rgb(223, 216, 18);/* Old browsers */
+    background: -moz-linear-gradient(top, rgb(223, 216, 18) 0%, rgb(255, 242, 204) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(223, 216, 18)), color-stop(100%,rgb(255, 242, 204))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, rgb(223, 216, 18) 0%,rgb(255, 242, 204) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, rgb(223, 216, 18) 0%,rgb(255, 242, 204) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, rgb(223, 216, 18) 0%,rgb(255, 242, 204) 100%); /* IE10+ */
+    background: linear-gradient(to bottom, rgb(223, 216, 18) 0%,rgb(255, 242, 204) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#DFD812', endColorstr='#FFF2CC',GradientType=0 ); /* IE6-9 */
+}
+
+.contact-status-indicator-dnd {
+    background-color: rgb(195, 30, 14);/* Old browsers */
+    background: -moz-linear-gradient(top, rgb(195, 30, 14) 0%, rgb(244, 204, 204) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(195, 30, 14)), color-stop(100%,rgb(244, 204, 204))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, rgb(195, 30, 14) 0%,rgb(244, 204, 204) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, rgb(195, 30, 14) 0%,rgb(244, 204, 204) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, rgb(195, 30, 14) 0%,rgb(244, 204, 204) 100%); /* IE10+ */
+    background: linear-gradient(to bottom, rgb(195, 30, 14) 0%,rgb(244, 204, 204) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c31e0e', endColorstr='#F4CCCC',GradientType=0 ); /* IE6-9 */
+}
+
+.contact-status-indicator-offline {
+    background-color: rgb(153, 153, 153); /* Old browsers */
+    background: -moz-linear-gradient(top, rgb(153, 153, 153) 0%, rgb(239, 239, 239) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(153, 153, 153)), color-stop(100%,rgb(239, 239, 239))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, rgb(153, 153, 153) 0%,rgb(239, 239, 239) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, rgb(153, 153, 153) 0%,rgb(239, 239, 239) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, rgb(153, 153, 153) 0%,rgb(239, 239, 239) 100%); /* IE10+ */
+    background: linear-gradient(to bottom, rgb(153, 153, 153) 0%,rgb(239, 239, 239) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#999999', endColorstr='#EFEFEF',GradientType=0 ); /* IE6-9 */
 }
 
