--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -6,20 +6,43 @@ html, body {
     text-align: center;
 }
 
-.page {
-    padding: 20px;
-}
-
 .column {
-    height: 100%;
-}
-
-.panel-wrapper {
     height: 100%;
     position: relative;
 }
 
-.panel {
+.application-wrapper {
+    background-color: rgb(243, 243, 243);
+    border-width: 1px;
+    border-color: rgb(196, 196, 196);
+    border-style: solid;
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: -1px;
+    right: -1px;
+}
+
+.application {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.application-body {
+    margin-top: 60px;
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+}
+
+.page {
+    padding: 20px;
+}
+
+.panel-wrapper {
     position: absolute;
     top: 3px;
     left: 3px;
@@ -33,12 +56,23 @@ html, body {
     box-shadow: 2px 2px 10px #888888;
 }
 
+.panel {
+    height: 100%;
+    position: relative;
+}
+
 .panel-item, .panel-header {
     border-bottom-width: 1px;
     border-bottom-color: rgb(196, 196, 196);
     border-bottom-style: solid;
     width: 100%;
     height: 34px;
+}
+
+.panel-item-text {
+    line-height: 34px;
+    font-size: 16px;
+    font-weight: 200;
 }
 
 .panel-header {
@@ -60,14 +94,12 @@ html, body {
 .panel-body {
     overflow: scroll;
     width: 100%;
-}
-
-.panel-item-text {
     position: absolute;
-    line-height: 34px;
-    left: 34px;
-    font-size: 16px;
-    font-weight: 200;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    margin-top: 36px;
 }
 
 .form-wrapper {
@@ -86,6 +118,16 @@ html, body {
 .nav-wrapper {
     padding-top: 10px;
     padding-right: 15px;
+}
+
+.contact-name {
+    position: absolute;
+    left: 34px;
+}
+
+.room-name {
+    position: absolute;
+    left: 10px;
 }
 
 #header {
@@ -130,29 +172,6 @@ html, body {
     width: 100%;
     color: #FFFFFF;
     text-shadow: 0 1px 0 #222222;
-}
-
-#application-wrapper {
-    background-color: rgb(243, 243, 243);
-    border-width: 1px;
-    border-color: rgb(196, 196, 196);
-    border-style: solid;
-    height: 100%;
-    position: relative;
-}
-
-#application {
-    width: 100%;
-    margin-top: 60px;
-    position: absolute;
-    top: 0px;
-    bottom: 0px;
-}
-
-@media (max-width: 979px) {
-    #application {
-        margin-top: 0px;
-    }
 }
 
 .contact-status-indicator {
@@ -210,3 +229,13 @@ html, body {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#999999', endColorstr='#EFEFEF',GradientType=0 ); /* IE6-9 */
 }
 
+/* Twitter Bootstrap Overrides */
+@media (max-width: 979px) {
+    .navbar-fixed-top, .navbar-fixed-bottom {
+        position: fixed;
+    }
+
+    .navbar-fixed-top {
+        margin: 0;
+    }
+}
