--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -44,16 +44,30 @@ html, body {
 
 .panel-wrapper {
     position: absolute;
-    top: 3px;
-    left: 3px;
-    right: 5px;
-    bottom: 5px;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
     border-width: 1px;
     border-color: rgb(196, 196, 196);
     border-style: solid;
     border-radius: 10px;
     background-color: rgb(255, 255, 255);
     box-shadow: 2px 2px 10px #888888;
+    margin: 4px;
+}
+
+.panel-wrapper-left {
+    margin-right: 2px;
+}
+
+.panel-wrapper-center {
+    margin-left: 2px;
+    margin-right: 2px;
+}
+
+.panel-wrapper-right {
+    margin-left: 2px;
 }
 
 .panel {
@@ -61,21 +75,13 @@ html, body {
     position: relative;
 }
 
-.panel-item, .panel-header {
+.panel-header {
     border-bottom-width: 1px;
     border-bottom-color: rgb(196, 196, 196);
     border-bottom-style: solid;
     width: 100%;
     height: 34px;
-}
-
-.panel-item-text {
-    line-height: 34px;
-    font-size: 16px;
-    font-weight: 200;
-}
-
-.panel-header {
+    position: absolute;
     font-size: 18px;
     font-weight: 400;
     line-height: 34px;
@@ -99,7 +105,45 @@ html, body {
     bottom: 0px;
     left: 0px;
     right: 0px;
-    margin-top: 36px;
+    margin-top: 35px;
+}
+
+.panel-body-no-header {
+    margin-top: 0px;
+}
+
+.panel-item {
+    border-bottom-width: 1px;
+    border-bottom-color: rgb(196, 196, 196);
+    border-bottom-style: solid;
+    width: 100%;
+    height: 34px;
+    position: relative;
+}
+
+.panel-item-large {
+    height: 68px;
+}
+
+.panel-item-left {
+    position: absolute;
+    width: 40px;
+    height: 100%;
+}
+
+.panel-item-center {
+    position: absolute;
+    margin-left: 40px;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+}
+
+.panel-item-text {
+    line-height: 34px;
+    font-size: 16px;
+    font-weight: 200;
 }
 
 .form-wrapper {
@@ -118,6 +162,14 @@ html, body {
 .nav-wrapper {
     padding-top: 10px;
     padding-right: 15px;
+}
+
+.clickable-box {
+    cursor: pointer;
+}
+
+.clickable-box:active {
+    background-color: rgb(206, 225, 243);
 }
 
 .contact-name {
@@ -161,6 +213,15 @@ html, body {
 #header-right {
     width: 40%;
     float: left;
+}
+
+#centerrow {
+    margin-left: 0px;
+    width: 630px;
+}
+
+#rightrow {
+    margin-left: 0px;
 }
 
 #logo {
@@ -227,6 +288,42 @@ html, body {
     background: -ms-linear-gradient(top, rgb(153, 153, 153) 0%,rgb(239, 239, 239) 100%); /* IE10+ */
     background: linear-gradient(to bottom, rgb(153, 153, 153) 0%,rgb(239, 239, 239) 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#999999', endColorstr='#EFEFEF',GradientType=0 ); /* IE6-9 */
+}
+
+.conversation-unread-message-count {
+    left: 5px;
+    top: 5px;
+    position: absolute;
+    color: rgb(255, 255, 255);
+    background-color: rgb(196, 196, 196);
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    border-radius: 6px;
+}
+
+.conversation-name {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 34px;
+    position: absolute;
+    left: 5px;
+    top: 2px;
+}
+
+.conversation-unread-message-preview {
+    position: absolute;
+    top: 34px;
+    left: 5px;
+    right: 5px;
+    height: 34px;
+    font-size: 15px;
+    font-weight: 200;
+    line-height: 34px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 /* Twitter Bootstrap Overrides */
