--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -159,7 +159,7 @@ html, body {
     box-shadow: 2px 2px 10px #888888;
 }
 
-.nav-wrapper {
+.button-wrapper {
     padding-top: 10px;
     padding-right: 15px;
 }
@@ -217,7 +217,6 @@ html, body {
 
 #centerrow {
     margin-left: 0px;
-    width: 630px;
 }
 
 #rightrow {
@@ -324,6 +323,24 @@ html, body {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+
+@media (min-width: 1200px) {
+    #centerrow {
+        width: 630px;
+    }
+}
+
+@media (min-width: 980px) and (max-width: 1199px) {
+    #centerrow {
+        width: 500px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 979px) {
+    #centerrow {
+        width: 392px;
+    }
 }
 
 /* Twitter Bootstrap Overrides */
