--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -39,7 +39,8 @@ html, body {
 }
 
 .page {
-    padding: 20px;
+    padding: 0;
+    margin: 0;
 }
 
 .panel-wrapper {
@@ -57,16 +58,24 @@ html, body {
     margin: 4px;
 }
 
-.panel-wrapper-left {
+.leftrow .panel-wrapper {
     margin-right: 2px;
 }
 
-.panel-wrapper-center {
+.centerrow {
+    margin-left: 0px;
+}
+
+.centerrow .panel-wrapper {
     margin-left: 2px;
     margin-right: 2px;
 }
 
-.panel-wrapper-right {
+.rightrow {
+    margin-left: 0px;
+}
+
+.rightrow .panel-wrapper {
     margin-left: 2px;
 }
 
@@ -112,7 +121,11 @@ html, body {
     margin-top: 0px;
 }
 
-.panel-item {
+.list {
+
+}
+
+.list-item {
     border-bottom-width: 1px;
     border-bottom-color: rgb(196, 196, 196);
     border-bottom-style: solid;
@@ -121,17 +134,17 @@ html, body {
     position: relative;
 }
 
-.panel-item-large {
+.list-item-large {
     height: 68px;
 }
 
-.panel-item-left {
+.list-item-left {
     position: absolute;
     width: 40px;
     height: 100%;
 }
 
-.panel-item-center {
+.list-item-center {
     position: absolute;
     margin-left: 40px;
     top: 0px;
@@ -140,7 +153,7 @@ html, body {
     right: 0px;
 }
 
-.panel-item-text {
+.list-item-text {
     line-height: 34px;
     font-size: 16px;
     font-weight: 200;
@@ -150,6 +163,7 @@ html, body {
 }
 
 .form-wrapper {
+    margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
@@ -166,6 +180,10 @@ html, body {
     padding-top: 10px;
     padding-right: 15px;
     padding-left: 15px;
+}
+
+.panel-header-nav .button-wrapper {
+    padding: 0;
 }
 
 .clickable-box {
@@ -193,7 +211,7 @@ html, body {
     right: 5px;
 }
 
-#header {
+.header {
     width: 100%;
     height: 60px;
     border-bottom-width: 1px;
@@ -224,14 +242,6 @@ html, body {
 #header-right {
     width: 40%;
     float: left;
-}
-
-#userhomepage-centerrow {
-    margin-left: 0px;
-}
-
-#userhomepage-rightrow {
-    margin-left: 0px;
 }
 
 #logo {
@@ -335,19 +345,19 @@ html, body {
 }
 
 @media (min-width: 1200px) {
-    #userhomepage-centerrow {
+    .centerrow {
         width: 630px;
     }
 }
 
 @media (min-width: 980px) and (max-width: 1199px) {
-    #userhomepage-centerrow {
+    .centerrow {
         width: 500px;
     }
 }
 
 @media (min-width: 768px) and (max-width: 979px) {
-    #userhomepage-centerrow {
+    .centerrow {
         width: 392px;
     }
 }
