--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -42,10 +42,32 @@ html, body {
     top: 0px;
 }
 
+
+/* Page CSS
+*******************************************************************/
+
 .page {
-    margin: 0;
+    bottom: 0px;
+    height: auto;
+    left: 0px;
+    margin-bottom: 2px;
+    margin-left: 0;
+    margin-right: 0px;
+    margin-top: 2px;
     padding: 0;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    width: auto;
 }
+
+.rightrow {
+    margin-left: 0px;
+}
+
+
+/* Panel CSS
+*******************************************************************/
 
 .panel-wrapper {
     background-color: rgb(255, 255, 255);
@@ -56,36 +78,28 @@ html, body {
     bottom: 0px;
     box-shadow: 2px 2px 10px #888888;
     left: 0px;
-    margin: 4px;
+    margin: 2px;
     position: absolute;
     right: 0px;
     top: 0px;
 }
 
 .leftrow .panel-wrapper {
-    margin-right: 2px;
-}
-
-.centerrow {
-    margin-left: 0px;
-}
-
-.centerrow .panel-wrapper {
-    margin-left: 2px;
-    margin-right: 2px;
-}
-
-.rightrow {
-    margin-left: 0px;
+    margin-left: 4px;
 }
 
 .rightrow .panel-wrapper {
-    margin-left: 2px;
+    margin-right: 4px;
 }
 
-
-/* Panel CSS
-*******************************************************************/
+.slide-left {
+    border-bottom-right-radius: 0;
+    border-right-style: none;
+    border-top-right-radius: 0;
+    margin-left: 20px;
+    margin-right: 0px !important;
+    padding-right: 0px !important;
+}
 
 .panel {
     height: 100%;
@@ -96,18 +110,16 @@ html, body {
     border-bottom-color: rgb(196, 196, 196);
     border-bottom-width: 1px;
     border-bottom-style: solid;
-    font-size: 18px;
-    font-weight: 400;
     height: 34px;
-    line-height: 34px;
     position: absolute;
     width: 100%;
 }
 
 .panel-header-title {
     left: 0px;
-    padding-left: 10px;
-    padding-right: 35px;
+    padding: 0px;
+    margin-left: 10px;
+    margin-right: 35px;
     position: absolute;
     right: 0px;
 }
@@ -152,16 +164,16 @@ html, body {
 }
 
 .box-with-header .box-body {
-    margin-top: 42px;
+    margin-top: 40px;
 }
 
 .box-with-footer .box-body {
-    margin-bottom: 42px;
+    margin-bottom: 40px;
 }
 
 .box-footer {
     bottom: 0px;
-    height: 42px;
+    height: 40px;
     left: 0px;
     position: absolute;
     width: 100%;
@@ -172,7 +184,7 @@ html, body {
     font-weight: 500;
     left: 0px;
     line-height: 32px;
-    height: 42px;
+    height: 40px;
     position: absolute;
     top: 0px;
     width: 100%;
@@ -190,12 +202,12 @@ html, body {
     border-bottom-color: rgb(196, 196, 196);
     border-bottom-style: solid;
     border-bottom-width: 1px;
-    font-size: 16px;
-    font-weight: 200;
-    height: 34px;
-    line-height: 34px;
     position: relative;
     width: 100%;
+}
+
+.list-item-small {
+    height: 34px;
 }
 
 .list-item-large {
@@ -225,6 +237,19 @@ html, body {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+
+.text-header {
+    font-size: 18px;
+    font-weight: 400;
+    height: 34px;
+    line-height: 34px;
+}
+
+.text-simple {
+    font-size: 16px;
+    font-weight: 200;
+    line-height: 34px;
 }
 
 .form-wrapper {
@@ -266,8 +291,8 @@ html, body {
 }
 
 .room-name {
-    position: absolute;
     left: 10px;
+    position: absolute;
     right: 5px;
 }
 
@@ -411,8 +436,85 @@ html, body {
     line-height: 34px;
 }
 
+/* ChatWidget CSS
+*******************************************************************/
 
-/* Twitter Bootstrap Overrides */
+.chat-widget {
+    height: 100%;
+    position: relative;
+    width: 100%;
+}
+
+.chat-widget-messages {
+    bottom: 0px;
+    height: auto;
+    left: 0px;
+    margin-bottom: 80px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    width: auto;
+}
+
+.chat-widget-input {
+    height: 80px;
+    position: absolute;
+    width: 100%;
+    bottom: 0px;
+}
+
+.chat-widget-input textarea {
+    bottom: 0px;
+    /*box-shadow: 2px 2px 10px #888888;*/
+    height: auto;
+    left: 0px;
+    margin-bottom: 2px;
+    margin-left: 2px;
+    margin-right: 2px;
+    margin-top: 40px;
+    position: absolute;
+    resize: none;
+    right: 0px;
+    top: 0px;
+    width: auto;
+}
+
+/* Message CSS
+*******************************************************************/
+.message-wrapper {
+    padding: 5px;
+    position: relative;
+}
+
+.message-sent-at {
+    color: rgb(210, 228, 243);
+    text-align:center;
+    line-height: 30px;
+}
+
+.message-sent-by {
+    color: rgb(176, 176, 176);
+    font-size: 17px;
+    font-weight: 200;
+    left: 14px;
+    position: absolute;
+    top: 9px;
+    margin: 0;
+}
+
+.message-message {
+    font-size: 15px;
+    font-weight: 200;
+    margin-left: 20px;
+    margin-bottom: 10px;
+}
+
+
+/* Twitter Bootstrap Overrides
+*******************************************************************/
 @media (max-width: 979px) {
     .navbar-fixed-top, .navbar-fixed-bottom {
         position: fixed;
