--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -37,6 +37,7 @@ html, body {
     bottom: 0px;
     left: 0px;
     margin-top: 60px;
+    overflow: scroll;
     position: absolute;
     right: 0px;
     top: 0px;
@@ -482,8 +483,10 @@ html, body {
     width: auto;
 }
 
+
 /* Message CSS
 *******************************************************************/
+
 .message-wrapper {
     padding: 5px;
     position: relative;
@@ -512,6 +515,17 @@ html, body {
     margin-bottom: 10px;
 }
 
+
+/* Settings CSS
+*******************************************************************/
+
+.settings-box {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    max-width: 544px;
+    height: 300px;
+}
 
 /* Twitter Bootstrap Overrides
 *******************************************************************/
