--- a/projects/airbugclient/static/template.mustache
+++ b/projects/airbugclient/static/template.mustache
@@ -7,14 +7,22 @@ NOTE BRN: This file is just temporary for now. The serving of the index page wil
         <title>airbug</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-        <link rel="stylesheet" href="/css/bootstrap.css" />
-        <link rel="stylesheet" href="/css/bootstrap-responsive.css" />
-        <link rel="stylesheet" href="/css/styles.css" />
+        <link rel="stylesheet" href="/airbugclient/static/css/bootstrap.css" />
+        <link rel="stylesheet" href="/airbugclient/static/css/bootstrap-responsive.css" />
+        <link rel="stylesheet" href="/airbugclient/static/css/styles.css" />
     </head>
     <body>
-        <script src="/mustache.js"></script>
-        <script src="/jquery.js"></script>
-        <script src="/underscore.js"></script>
+        <script src="/airbugclient/js/BugPackKey.js"></script>
+        <script src="/airbugclient/js/BugPackPackage.js"></script>
+        <script src="/airbugclient/js/BugPackRegistryEntry.js"></script>
+        <script src="/airbugclient/js/BugPackRegistry.js"></script>
+        <script src="/airbugclient/js/UrlBugPackScanner.js"></script>
+        <script src="/airbugclient/js/BugPackContext.js"></script>
+        <script src="/airbugclient/js/BugPackApi.js"></script>
+
+        <script src="/airbugclient/js/mustache.js"></script>
+        <script src="/airbugclient/js/jquery.js"></script>
+        <script src="/airbugclient/js/underscore.js"></script>
         <script src="/backbone.js"></script>
         <script src="/bootstrap.js"></script>
 
