--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -514,7 +514,7 @@ html, body {
     margin: 0;
 }
 
-.message-message {
+.message-body {
     font-size: 15px;
     font-weight: 200;
     margin-left: 20px;
