--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -525,6 +525,17 @@ html, body {
     display: none;
 }
 
+.message-failed-true {
+    position: absolute;
+    top: 9px;
+    right: 14px;
+    margin: 0;
+}
+
+.message-failed-false {
+    display: none;
+}
+
 .message-body {
     font-size: 15px;
     font-weight: 200;
