Interim Commit. Refactors UserHomePageContainer to use new TwoColumnView. Adds ThreeColumnView Refactors RoomsHamburgerButtonContainer. Updates styling for hamburger panels

--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -625,7 +625,7 @@ html, body {
 /* Hamburger Panel CSS
 *******************************************************************/
 
-.hamburger-panel-left, .hamburger-panel-right {
+.hamburger-panel-left>div, .hamburger-panel-right>div {
     background-color: rgb(207, 226, 243); /* Old browsers */
 }
 
