--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -1,5 +1,6 @@
 html, body {
     height: 100%;
+    line-height: 120%;
 }
 
 .center {
@@ -131,6 +132,33 @@ html, body {
     margin-left: 0px;
 }
 
+/* Notification CSS
+*******************************************************************/
+
+.notification-container {
+    position: fixed;
+    top: 50px;
+    right: 32px;
+    z-index: 1040;
+    display: none;
+    line-height: 120%;
+    height: auto;
+    padding: 8px;
+    background-color: rgb(255, 255, 255);
+    border-color: rgb(207, 226, 243); /* Old browsers */
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px #888888;
+}
+
+.notification-message {
+
+}
+
+.notification-message.error-notification {
+    color: red;
+}
 
 /* Panel CSS
 *******************************************************************/
