Interim Commit. First pass at workspace, code editor, and codeChatMessage rendering features. Requires testing.

--- a/projects/airbugclient/resources/views/home.mustache
+++ b/projects/airbugclient/resources/views/home.mustache
@@ -13,10 +13,16 @@ NOTE BRN: This file is just temporary for now. The serving of the index page wil
     </head>
     <body>
         <script type="text/javascript" src="https://s3.amazonaws.com/airbug/bugpack-0.0.1.js"></script>
-        <script type="text/javascript" src="/airbug-application-loader.js"></script>
+
+        <!-- highlight.js -->
+        <link rel="stylesheet" href="http://yandex.st/highlightjs/7.3/styles/default.min.css">
+        <script src="http://yandex.st/highlightjs/7.3/highlight.min.js"></script>
+        <script>hljs.initHighlightingOnLoad();</script>
+
         <!-- UserVoice JavaScript SDK (only needed once on a page) -->
         <script>(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/EYy2Up2867d0eT7mVPDhDQ.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})()</script>
 
+        <!-- UserVoice -->
         <!-- A tab to launch the Classic Widget -->
         <script>
         UserVoice = window.UserVoice || [];
@@ -32,6 +38,9 @@ NOTE BRN: This file is just temporary for now. The serving of the index page wil
           tab_inverted: false
         }]);
         </script>
+
+        <!-- load airbug application -->
+        <script type="text/javascript" src="/airbug-application-loader.js"></script>
     </body>
 </html>
 
