Fix a few button issues. Add LoginWithGithubButton

--- a/projects/airbugclient/resources/views/home.mustache
+++ b/projects/airbugclient/resources/views/home.mustache
@@ -9,6 +9,7 @@ NOTE BRN: This file is just temporary for now. The serving of the index page wil
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
         <link rel="stylesheet" href="/css/bootstrap.css" />
         <link rel="stylesheet" href="/css/bootstrap-responsive.css" />
+        <link rel="stylesheet" href="/css/auth-buttons.css" />
         <link rel="stylesheet" href="/css/styles.css" />
     </head>
     <body>
