--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -168,7 +168,7 @@ html, body {
     border-color: rgb(196, 196, 196);
     border-width: 1px;
     border-style: solid;
-    border-radius: 10px;
+    border-radius: 5px;
     bottom: 0px;
     box-shadow: 2px 2px 10px #888888;
     left: 0px;
@@ -353,7 +353,6 @@ html, body {
     margin-right: auto;
     padding: 20px;
     background-color: rgb(255, 255, 255);
-    max-width: 544px;
     border-width: 1px;
     border-color: rgb(196, 196, 196);
     border-style: solid;
@@ -683,10 +682,38 @@ html, body {
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
-    max-width: 544px;
+    max-width: 586px;
     height: 300px;
 }
 
+.create-room-box {
+
+}
+
+.login-box {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 586px;
+    height: 244px;
+}
+
+.login-box .box-footer {
+    height: 60px;
+}
+
+.login-box .box-footer .panel-wrapper {
+    margin: 0;
+}
+
+.btn-github {
+    margin: 10px;
+}
+
+.registration-box {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 586px;
+}
 
 /* ZeroClipboard
 *******************************************************************/
