First round trip github login

--- a/projects/airbugclient/resources/views/home.mustache
+++ b/projects/airbugclient/resources/views/home.mustache
@@ -13,6 +13,9 @@ NOTE BRN: This file is just temporary for now. The serving of the index page wil
         <link rel="stylesheet" href="/css/styles.css" />
     </head>
     <body>
+        <script type="text/javascript">
+            var _appConfig = "{{{config}}}";
+        </script>
         <script type="text/javascript" src="https://s3.amazonaws.com/airbug/bugpack-0.0.1.js"></script>
 
         <!-- highlight.js -->
