--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -766,48 +766,35 @@ li.add-roommember-container {
     width: 398px;
 }
 
-/* CodeEditor CSS (borrows from Box CSS)
+/* CodeEditor and CodeEditorSettings CSS (borrows from Box CSS)
 *******************************************************************/
 
-.code-editor {
-    height: 100%;
+.code-editor.box {
     position: relative;
-    width: 100%;
 }
 
-.code-editor-body {
+.code-editor .box-body {
     margin: 46px 0px;
+}
+
+.code-editor-footer button {
+    width: 100%;
     position: absolute;
-    top: 0;
     bottom: 0;
     left: 0;
     right: 0;
 }
 
-.code-editor-footer {
-    bottom: 0px;
-    height: 40px;
-    left: 0px;
-    position: absolute;
-    width: 100%;
-}
-
-.code-editor-header {
-    font-size: 18px;
-    font-weight: 500;
-    left: 0px;
-    line-height: 32px;
-    height: 40px;
-    position: absolute;
-    top: 0px;
-    width: 100%;
-}
-
-.code-editor-footer button {
-    width: 100%;
-}
 .code-editor-body.ace_editor {
     position: absolute;
+}
+
+.code-editor-settings .box-header, .code-editor-settings .box-body, .code-editor-settings .box-footer {
+    position: static;
+}
+
+.code-editor-settings .box-body {
+    margin: 0px;
 }
 
 /* Twitter Bootstrap Overrides
