--- a/projects/airbugclient/resources/views/home.mustache
+++ b/projects/airbugclient/resources/views/home.mustache
@@ -7,6 +7,7 @@ NOTE BRN: This file is just temporary for now. The serving of the index page wil
         <title>airbug</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+        <meta name="description" content="Collaborative chat for developers">
         <link rel="stylesheet" href="/css/bootstrap.css" />
         <link rel="stylesheet" href="/css/bootstrap-responsive.css" />
         <link rel="stylesheet" href="/css/auth-buttons.css" />
