--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -564,6 +564,10 @@ html, body {
     bottom: 0;
 }
 
+.chat-widget-input .column2of2 {
+    margin: 0;
+}
+
 .chat-widget-input textarea {
     height: 3em;
     margin-left: 2px;
@@ -582,6 +586,21 @@ html, body {
     border-style: solid;
     border-radius: 10px;
     box-shadow: 2px 2px 10px #888888;
+}
+
+.chat-widget-input .button-wrapper {
+    position: absolute;
+    padding: 0px;
+}
+
+.chat-widget-input .button-wrapper:first-child {
+    left: 0;
+    width: 33%;
+}
+
+.chat-widget-input .button-wrapper:last-child {
+    right: -9%;
+    width: 77%;
 }
 
 .chat-widget-input .btn {
