Adds styling for buttons within btn-group.

--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -12,6 +12,9 @@ html, body {
     position: relative;
 }
 
+.btn-group .button-wrapper {
+    padding: 0px;
+}
 
 /* Application CSS
 *******************************************************************/
