--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -288,6 +288,13 @@ html, body {
     width: 100%;
 }
 
+.half-box {
+    height: 50%;
+}
+
+.quarter-box {
+    height: 25%;
+}
 
 /* List CSS
 *******************************************************************/
@@ -633,45 +640,56 @@ html, body {
 /* Message CSS
 *******************************************************************/
 
-.message-wrapper {
+.message-wrapper, .chatmessage-wrapper {
     padding: 5px;
     position: relative;
 }
 
-.message-sent-at, .message-created-at {
-    color: rgb(210, 228, 243);
-    text-align:right;
-    line-height: 30px;
+.message-header, .chatmessage-header {
+    position: relative;
+    height: 2em;
+    line-height: 1.6em;
 }
 
-.message-sent-by {
+.message-footer, .chatmessage-footer {
+    position: relative;
+    height: 1.6em;
+    line-height: 1.6em;
+}
+
+.message-sent-at, .message-created-at, .chatmessage-sent-at, .chatmessage-created-at {
+    position: absolute;
+    right: 14px;
+    color: rgb(210, 228, 243);
+    text-align:right;
+}
+
+.message-sent-by, .chatmessage-sent-by {
     color: rgb(176, 176, 176);
     font-size: 17px;
     font-weight: 200;
     left: 14px;
     position: absolute;
-    top: 9px;
     margin: 0;
 }
 
-.message-pending-true, .message-failed-true  {
+.message-pending-true, .message-failed-true, .chatmessage-pending-true, .chatmessage-failed-true, .message-failed-true, .chatmessage-failed-true  {
     position: absolute;
-    top: 9px;
-    right: 14px;
+    top: -5px;
+    right: 20px;
     margin: 0;
 }
 
-.message-pending-false, .message-failed-false {
+.message-pending-false, .message-failed-false, .chatmessage-pending-false, .chatmessage-failed-false {
     display: none;
 }
 
-.message-failed-true>button, .message-failed-false>button {
+.message-failed-true>button, .message-failed-false>button, .chatmessage-failed-true>button, .chatmessage-failed-false>button {
     border-radius: 15px;
-    line-height: 16px;
     padding: 1px 2px 1px 2px;
 }
 
-.message-body {
+.message-body, .chatmessage-body {
     font-size: 15px;
     font-weight: 200;
     margin-left: 20px;
@@ -807,14 +825,6 @@ li.add-roommember-container {
     height: 62px;
 }
 
-.code-editor-settings .box-header, .code-editor-settings .box-body, .code-editor-settings .box-footer {
-    position: static;
-}
-
-.code-editor-settings .box-body {
-    margin: 0px;
-}
-
 .code-editor {
     width: 100%;
     height: 100%;
@@ -838,6 +848,58 @@ li.add-roommember-container {
 
 #image-list-container .box-footer .btn-group .btn:last-child {
     width: 80%
+}
+
+/* ImageUpload CSS
+*******************************************************************/
+
+#image-upload-container .box-body .box {
+    padding: 150px 94px;
+}
+
+#file-upload-widget .control-group {
+    width: 100%;
+}
+
+#file-upload-widget .control-group .control-label {
+    width: 30%;
+}
+
+@charset "UTF-8";
+/*
+ * jQuery File Upload Plugin CSS 1.3.0
+ * https://github.com/blueimp/jQuery-File-Upload
+ *
+ * Copyright 2013, Sebastian Tschan
+ * https://blueimp.net
+ *
+ * Licensed under the MIT license:
+ * http://www.opensource.org/licenses/MIT
+ */
+
+.fileinput-button {
+    position: relative;
+    overflow: hidden;
+}
+.fileinput-button input {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    opacity: 0;
+    -ms-filter: 'alpha(opacity=0)';
+    font-size: 200px;
+    direction: ltr;
+    cursor: pointer;
+}
+
+/* Fixes for IE < 8 */
+@media screen\9 {
+    .fileinput-button input {
+        filter: alpha(opacity=0);
+        font-size: 100%;
+        height: 100%;
+    }
 }
 
 /* Twitter Bootstrap Overrides
