--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -891,12 +891,22 @@ li.add-roommember-container {
     padding-left: 0px;
 }
 
+#image-upload-add-by-url-container .control-label {
+    width: 17%;
+}
+
 #image-upload-add-by-url-container .controls {
-    margin-left: 33%;
+    margin-left: 0px;
 }
 
 #image-upload-add-by-url-container .controls input {
-    width: 80%;
+    width: 60%;
+    margin-left: 5px;
+}
+
+#image-upload-add-by-url-container .controls button {
+    height: 30px;
+    opacity: 1;
 }
 
 #file-upload-widget {
@@ -908,11 +918,11 @@ li.add-roommember-container {
 }
 
 #file-upload-widget .control-group .control-label {
-    width: 30%;
+    width: 17%;
 }
 
 #file-upload-widget .btn-toolbar:last-child .btn-group {
-    width: 75.5%;
+    width: 82%;
 }
 
 @charset "UTF-8";
