--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -163,6 +163,99 @@ html, body {
     color: red;
 }
 
+
+/* Overlay CSS
+*******************************************************************/
+
+div.overlay-wrapper, div.overlay-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+div.overlay-wrapper {
+    display: none;
+}
+
+div.application-overlay.overlay-wrapper {
+    z-index: 199;
+}
+
+div.application-overlay .overlay-background {
+    z-index: 200;
+}
+
+div.page-overlay.overlay-wrapper {
+    z-index: 99;
+}
+
+div.page-overlay .overlay-background {
+    z-index: 100;
+    background: black;
+    opacity: 0.65;
+}
+
+div.overlay-background {
+    background: black;
+    opacity: 0.65;
+}
+
+.overlay {
+    background-color: white;
+    padding: 14px;
+    border-style: solid;
+    border-width: 5px;
+    border-color: rgb(41,137,216);
+    border-radius: 10px;
+}
+
+.application-overlay .overlay {
+    z-index: 201;
+}
+
+.page-overlay .overlay {
+    z-index: 101;
+}
+
+.overlay.one-quarter-overlay {
+    position: fixed;
+    top: 25%;
+    left: 37.5%;
+    min-height: 100px;
+    max-height: 50%;
+    width: 25%;
+}
+
+.overlay.one-third-overlay {
+    position: fixed;
+    top: 33%;
+    left: 33%;
+    min-height: 100px;
+    max-height: 33%;
+    width: 33%;
+}
+
+.overlay.one-half-overlay {
+    position: fixed;
+    top: 25%;
+    left: 25%;
+    min-height: 100px;
+    max-height: 50%;
+    width: 50%;
+}
+
+.overlay.fullscreen-overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: 10% 0%;
+    width: 100%;
+}
+
 /* Panel CSS
 *******************************************************************/
 
